2019-08-06  Karl Berry  <karl@freefriends.org>

	* aleph.man,
	* etex.man,
	* mf.man,
	* pdftex.man,
	* tex.man: mention --cnf-line.
	
2019-08-04  Karl Berry  <karl@freefriends.org>

	* pdftex.man (-synctex, -8bit): add per https://bugs.debian.org/772928.
	(-shell-restricted): also add this.
	Also don't italicize "PDF" and "DVI", url updates, etc.

2019-06-20  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: Regenerate with Pandoc 2.7.3,
	* cweb.man: Fix initial statement in NAME section.

2019-03-30  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ppltotf.man, ptftopl.man: new.

2019-03-25  Karl Berry  <karl@freefriends.org>

	* gftodvi.man: omit unused second font letter. From Debian.

2019-03-10  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: Fix non-macro '\\PB';
	add reference to 'Digital Typography' with full example.

2019-02-01  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: Recompile manpages with Pandoc 2.6.  This un-escapes
	'-', because it was rendered as "unicode minus"; see release page
	https://github.com/jgm/pandoc/releases/tag/2.6

2019-01-28  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: Updated manpages; describe differences to original CWEB.

2019-01-10  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: New manpage for CTWILL and its tools.
	* Makefile.am (bootstrap_man_sources): add ctwill.man.
	(man1_links): add ctwill-refsort and ctwill-twinx as ctwill aliases.

2019-01-10  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: editorial changes.

2019-01-06  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: update for CWEBbin options, etc.

2018-12-21  Karl Berry  <karl@freefriends.org>

	* mpost.man: mention rmpost, (r)pmpost, and (r)upmpost.

2018-10-28  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: do not mention nonexistent -DSTAT option.

2018-06-04  Karl Berry  <karl@tug.org>
