@@ -1,4 +1,4 @@
-%% $Id: dvipdfmx.cfg 38778 2015-11-05 00:08:29Z karl $
+%% $Id: dvipdfmx.cfg 52847 2019-11-17 22:42:51Z karl $
 %% dvipdfmx.cfg for dvipdfmx and xdvipdfmx.  (Public domain.)
 %% (maintained in TeX Live /source/ tree, copied to Master.)
 %% 
@@ -156,7 +156,7 @@ P  0x003C
 %% kpsewhich -progname=dvipdfmx -format='other text files' dvipdfmx.cfg
 %% and control which one is found by setting DVIPDFMXINPUTS.
 %%
-D  "rungs -q -dNOPAUSE -dBATCH -dEPSCrop -sPAPERSIZE=a0 -sDEVICE=pdfwrite -dCompatibilityLevel=%v -dAutoFilterGrayImages=false -dGrayImageFilter=/FlateEncode -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dAutoRotatePages=/None -sOutputFile='%o' '%i' -c quit"
+D  "rungs -q -dDELAYSAFER -dNOPAUSE -dBATCH -dEPSCrop -sPAPERSIZE=a0 -sDEVICE=pdfwrite -dCompatibilityLevel=%v -dAutoFilterGrayImages=false -dGrayImageFilter=/FlateEncode -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dAutoRotatePages=/None -sOutputFile='%o' '%i' -c quit"
 
 % other random ps converters people have experimented with.
 %D "/usr/local/bin/ps2pdf -dEPSCrop '%i' '%o'"
